# systems_design_lab

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  Makefile.frontend  README.md  docker-compose.yml  openapi.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: copilot-frontend.md  copilot-instructions.md
.github/workflows/: ci.yml
backend/: Dockerfile  __init__.py  main.py  openapi.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/api/: __init__.py
backend/application/: __init__.py
backend/contracts/: __init__.py
backend/domain/: __init__.py
backend/infrastructure/: __init__.py
backend/scripts/: wait_for_db.py
backend/simulator/: __init__.py  registry.py  scenario.py
backend/simulator/scenarios/: __init__.py  template_scenario.py
backend/src/app/: __init__.py
backend/src/app/api/: __init__.py  main.py
backend/src/app/api/middleware/: request_id.py  simulator_injection.py
backend/src/app/api/routers/: health.py  metrics.py  simulator.py
backend/src/app/application/: __init__.py
backend/src/app/application/ports/: __init__.py  clock.py  metrics.py  simulator_store.py
backend/src/app/application/simulator/: __init__.py  app_models.py  exceptions.py  models.py  registry.py  service.py
backend/src/app/application/simulator/scenarios/: TEMPLATE.py  __init__.py  algorithmic_degradation.py  cache_stampede.py  circuit_breaker.py  clock_skew.py  connection_pool_exhaustion.py  cpu_spike.py  disk_full.py  error_burst.py  fixed_latency.py  lock_contention.py  memory_leak.py  n_plus_one_query.py  network_partition.py  resource_starvation.py  retry_storm.py  slow_db_query.py  stale_read.py
backend/src/app/contracts/: __init__.py  health.py  simulator.py
backend/src/app/domain/: __init__.py  types.py
backend/src/app/guardrails/: __init__.py  arch_check.py  contracts_accept.py  contracts_check.py
backend/src/app/infrastructure/: __init__.py
backend/src/app/infrastructure/db/: __init__.py  session.py
backend/src/app/infrastructure/observability/: __init__.py  logging.py  metrics.py  middleware.py  tracing.py
backend/src/app/infrastructure/simulator/: __init__.py  memory_store.py
backend/src/app/infrastructure/time/: __init__.py  system_clock.py
backend/tests/: conftest.py
backend/tests/contract/: __init__.py
backend/tests/integration/: __init__.py  test_middleware_injection.py  test_scenario_workflow.py
backend/tests/unit/: __init__.py  test_api_main.py  test_arch_check.py  test_contracts_accept.py  test_contracts_check.py  test_db_session.py  test_memory_store.py  test_n_plus_one_query.py  test_placeholder.py  test_request_id.py  test_scenario_metrics.py  test_simulator_injection.py  test_simulator_registry.py  test_simulator_router.py  test_simulator_scenarios.py  test_simulator_service.py  test_smoke.py  test_stale_read.py
docs/: BRANCH_NAMING_STANDARDS.md  CI_AND_PRECOMMIT.md  DEVELOPMENT_SETUP.md  EXECUTIVE_SUMMARY.md  FRONTEND_BRANCH_SUMMARY.md  FRONTEND_IMPLEMENTATION.md  OBSERVABILITY.md  OBSERVABILITY_IMPLEMENTATION_SUMMARY.md  PROJECT_STATUS.md  QUICK_START.md  ROADMAP.md  SCENARIO_TRACKER.md
frontend/: .gitignore  Dockerfile  README.md  index.html  jest.config.cjs  jest.config.js  jest.setup-after-env.cjs  jest.setup.cjs  jest.setup.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/e2e/: simulator.spec.ts
frontend/frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/__tests__/: App.test.tsx  SimulatorControlPanel.integration.test.tsx  forms.test.ts  hooks.test.ts  simple.test.ts
frontend/src/api/: client.ts  types.ts
frontend/src/api/__tests__/: client.test.ts
frontend/src/components/: ActiveScenarios.tsx  GlobalBanner.tsx  ScenarioCard.tsx
frontend/src/components/__tests__/: ActiveScenarios.test.tsx  GlobalBanner.test.tsx  ScenarioCard.test.tsx  SimulatorControlPanel.test.tsx
frontend/src/pages/: SimulatorControlPanel.tsx
frontend/src/schemas/: forms.ts
frontend/src/test/: setup.ts  testUtils.tsx
frontend/tests/e2e/: error_handling.spec.ts  resilience.spec.ts  simulator.spec.ts
guardrails/: __init__.py  architecture_checker.py  contract_checker.py  runner.py
observability/grafana/dashboards/: simulator-scenarios.json  system-metrics.json
observability/grafana/provisioning/dashboards/: dashboards.yml
observability/grafana/provisioning/datasources/: datasources.yml
observability/loki/: loki-config.yml
observability/prometheus/: prometheus.yml
observability/promtail/: promtail-config.yml
observability/tempo/: tempo-config.yml
scripts/: dev-container.sh  diagnose.sh  status.sh  test-stack.sh  validate-backend.sh  validate-frontend.sh
