[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "systems-design-lab-backend"
version = "0.1.0"
description = "Production-grade local systems design lab - Backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.6",
  "pydantic>=2.8.2",
  "sqlalchemy>=2.0.32",
  "psycopg[binary]>=3.2.1",
]

[project.optional-dependencies]
dev = [
  "black>=24.8.0",
  "ruff>=0.6.4",
  "mypy>=1.11.2",
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
  "pytest-asyncio>=0.23.0",
  "hypothesis>=6.112.0",
  "testcontainers>=4.8.2",
  "httpx>=0.27.2",
  "types-requests>=2.32.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["ARG", "S101"]

[tool.mypy]
python_version = "3.11"
mypy_path = ["src"]
packages = ["app"]
strict = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "testcontainers.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q --cov=app --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = ["integration: requires external services (e.g., Postgres)"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/app"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@abstractmethod",
]
fail_under = 85
